2002-05-20  Federico Mena Quintero  <federico@ximian.com>

	Fixes #82140.

	* libgnome/gnome-help.c (gnome_help_display_with_doc_id): Clarified
	error messages.  De-convoluted function a bit.  Made it check for
	the stat() return value.  Made it check for device and inode
	numbers instead of just inode number in the fallback code.
	(locate_help_file): Use g_build_filename() so that we don't get
	duplicated slashes, which yelp warns about.

	* doc/reference/libgnome-sections.txt: Added
	gnome_help_display_with_doc_id.

2002-05-20  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 1.117.1

2002-05-16  jacob berkman  <jacob@ximian.com>

	* schemas/desktop_gnome_peripherals_keyboard.schemas: remove bell
	volume, as it's not used, and default to a nicer pitch.  fix for
	#78016
	
	* schemas/desktop_gnome_applications_browser.schemas: remove http,
	ftp handlers and just default to the default
	
	* schemas/desktop_gnome_applications_editor.schemas:
	* schemas/Makefile.am (schema_DATA): remove default editors
	schemas

	fixes #78037

	* schemas/desktop_gnome_background.schemas: set the default
	wallpaper image to "".  fixes #76693

2002-05-14  jacob berkman  <jacob@ximian.com>

	* revert previous commit; it busted the build and is broken
	anyway.  see bug #76993

Tue May 14 15:44:38 2002  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_background.schemas.in: add prototype file
	for setting the right $(prefix), #76432

	* schemas/Makefile.am: create desktop_gnome_background.schemas

	* schemas/desktop_gnome_background.schemas: remove file

2002-05-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* help-converters/info/data.h:
	* help-converters/info/html.c:
	* help-converters/info/main.c: (main):
	* help-converters/info/parse.c: (read_node), (read_node_contents):
	* help-converters/info/parse.h:
	* help-converters/info/utils.c: (alloc_node), (readbuf_open),
	(readbuf_close), (readbuf_eof), (readbuf_getc), (readbuf_gets):