@@ -1,3 +1,10 @@
+2002-05-21  jacob berkman  <jacob@ximian.com>
+
+	* help-converters/man/gnome-man2html.c (main): modified patch from
+	Jim Bowen <jim_bowen@alum.mit.edu> to work with caching man
+
+	fixes bug #81129
+
 2002-05-20  Federico Mena Quintero  <federico@ximian.com>
 
 	Fixes #82140.
